	this one as well is independent of internal structs
	in pcp and should therefore be future proof.

	Internal api change: added pcpstream, which is a
	wrapper around file i/o or buffer i/o. It's used
	in libpcp/crypto.c (more to follow), so it depends
	on the caller if it works on files or on buffers.
	Pcpstreams also automatically encode/decode Z85.

	Lots of refactoring have been done to clear things
	out and make the system work with the changes
	above.

	Added various convenience pubkey export formats,
	beside pbp and pcp also supported are now perl,
	c and yaml code. A programmer can use this to
	put a public key in a small program.

	Finally found the bug that leaded to the unittests
	sometimes fail as previously described in the TODO
	file: the function libpcp/z85.c:_buffer_is_binary()
	shall return a non-zero value if it finds a binary
	character in the input. However, if the first char
	of the input was binary it returned 0, which was then
	interpreted later such that the input is ascii.
	To fix this, the function now starts at position 1
	to search.

	Added API doc for libpcp, generated using doxygen
	in man/html/. Latest API docs can be found on
	http://www.daemon.de/libpcp/.

0.2.0	ED25519 and Curve25519 keys are now generated
	separately (previously they were generated from
	one random seed, the curve had been derived from
	the ed key).

	To encrypt the secret keys, we're now using a key
	derived from the user passphrase generated using
	the scrypt() function, incorporated from tarsnap
	via scrypt-1.1.6.

	The "derived pcp key" feature has been dropped.

	Encrypted file format/scheme changed. Previously
	I included the sender's key-id with the encrypted
	cipher as a hash. So, encrypted message do no more
	contain pk material.

	Changed signature scheme completely. Binary signature
	follow the pbp scheme: calculate blake2 hash of the
	content, sign the hash, write out original content,
	add "\nnacl-", add the signature, add the hash.