@@ -38,6 +38,6 @@
 #include "pcpstream.h"
 
 int pcpdecrypt(char *id, int useid, char *infile, char *outfile, char *passwd, int verify);
-int pcpencrypt(char *id, char *infile, char *outfile, char *passwd, plist_t *recipient, int signcrypt);
+int pcpencrypt(char *id, char *infile, char *outfile, char *passwd, plist_t *recipient, int signcrypt, int armor);
 
 #endif /*  _HAVE_ENCRYPTION_H */
