@@ -35,6 +35,40 @@ include keys.cfg
 </test>
 
 
+<test check-streams>
+  <test check-streams-8-8>
+    md5 = `md5 -q ../COPYING`
+    cmd = ./pipetest 8 8 e < ../COPYING | ./pipetest 8 8 d | md5 -q
+    expect = /$md5/
+  </test>
+  <test check-streams-8-16>
+    md5 = `md5 -q ../COPYING`
+    cmd = ./pipetest 8 16 e < ../COPYING | ./pipetest 8 16 d | md5 -q
+    expect = /$md5/
+  </test>
+  <test check-streams-16-8>
+    md5 = `md5 -q ../COPYING`
+    cmd = ./pipetest 16 8 e < ../COPYING | ./pipetest 16 8 d | md5 -q
+    expect = /$md5/
+  </test>
+  <test check-streams-64-32>
+    md5 = `md5 -q ../COPYING`
+    cmd = ./pipetest 64 32 e < ../COPYING | ./pipetest 64 32 d | md5 -q
+    expect = /$md5/
+  </test>
+  <test check-streams-32-64>
+    md5 = `md5 -q ../COPYING`
+    cmd = ./pipetest 32 64 e < ../COPYING | ./pipetest 32 64 d | md5 -q
+    expect = /$md5/
+  </test>
+  <test check-streams-64-64>
+    md5 = `md5 -q ../COPYING`
+    cmd = ./pipetest 64 64 e < ../COPYING | ./pipetest 64 64 d | md5 -q
+    expect = /$md5/
+  </test>
+</test>
+
+
 <test check-show-help>
   cmd    = $pcp -h
   expect = /export/
